src/tests/errors/parsing/test05.cmp
program p begin    
  procedure a (x:int)
  begin 
  in
   f();
   f(1,2,3,4);     (* That is ok        *)  
   f(1,2,3,4,)     (* That should fail. *)
  end
end  
